test/Fail/Issue2250.err
Issue2250.agda:19.10-12: error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Is empty: f true ≡ f false (stuck)
      [ at Issue2250.agda:19.10-12 ]
